[macosx] JList, VO can't access non-visible list items

XMLWordPrintable

        If you open the "List Demo" tab of SwingSet2 (the 7th tab from the left), and you navigate to the list containing "YoYoSystems", "MetaDynamics", etc: With VoiceOver on, VoiceOver will not "speak" selected items when changing the selection (with cursor up/down).
            When entering the list with Ctrl-Option-Shift-Down Arrow, VoiceOver sees only 26 out of 30 items, and does not scroll past the visible items.

              Assignee:
              Pete Brunet (Inactive)
              Reporter:
              Pete Brunet (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: