8145207: [macosx] JList, VO can't access non-visible list items

Add support for single/multi select following focus and following VO cursor

Reviewed-by: alexsch, ant